ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inno-ingress
  namespace: inno
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - host: inno.local
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: apigateway
                port:
                  number: 8080
